--- a/Solution1/ProjetCours/Views/Shared/Components/Menu/Default.cshtml
+++ b/Solution1/ProjetCours/Views/Shared/Components/Menu/Default.cshtml
@@ -2,8 +2,10 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">Venezia</h5>
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="~/">Accueil</a>
-        <a class="p-2 text-dark" asp-controller="Cars" asp-action="Index">Enterprise</a>
-        <a class="p-2 text-dark" asp-controller="Cars" asp-action="Create">Ajouter</a>
+        <a class="p-2 text-dark" asp-controller="Login" asp-action="Index">Connexion</a>
+        <a class="p-2 text-dark" asp-controller="Login" asp-action="Register">Inscritption</a>
+        <a class="p-2 text-dark" asp-controller="Cars" asp-action="Index">Liste des Voitures</a>
+        <a class="p-2 text-dark" asp-controller="Cars" asp-action="Create">Ajouter voiture</a>
         <a class="p-2 text-dark" asp-controller="Fuels" asp-action="Create">Ajouter Fuel</a>
         <a class="p-2 text-dark" asp-controller="Basket" asp-action="Index">Panier</a>
         <a class="p-2 text-dark" asp-route="RouteAbout">A propos</a>
