--- a/Solution1/ProjetCours/Views/Login/Index.cshtml
+++ b/Solution1/ProjetCours/Views/Login/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetCours.Models.RegisterViewModel
 @{
 }
-
+<h1>Connexion</h1>
 <form asp-action="Index">
     <div asp-validation-summary="All" class="text-danger"></div>
 
