--- a/Solution1/ProjetCours/Views/Shared/Components/Menu/Default.cshtml
+++ b/Solution1/ProjetCours/Views/Shared/Components/Menu/Default.cshtml
@@ -1,8 +1,10 @@
-﻿<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+﻿@using ProjetCours
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ProjetCours
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">Venezia</h5>
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="~/">Accueil</a>
-        <a class="p-2 text-dark" asp-controller="Login" asp-action="Index">Connexion</a>
         <a class="p-2 text-dark" asp-controller="Login" asp-action="Register">Inscritption</a>
         <a class="p-2 text-dark" asp-controller="Cars" asp-action="Index">Liste des Voitures</a>
         <a class="p-2 text-dark" asp-controller="Cars" asp-action="Create">Ajouter voiture</a>
@@ -10,6 +12,15 @@
         <a class="p-2 text-dark" asp-controller="Basket" asp-action="Index">Panier</a>
         <a class="p-2 text-dark" asp-route="RouteAbout">A propos</a>
     </nav>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
+
+    @if (ViewContext.HttpContext.User.Identity.IsAuthenticated)
+    {
+        <username></username>
+        <a class="btn btn-outline-primary" asp-controller="Login" asp-action="Disconnect">Déconnexion</a>
+    }
+    else
+    {
+        <a class="btn btn-outline-primary" asp-controller="Login" asp-action="Index">Sign up</a>
+    }
 </div>
 
