--- a/Solution1/ProjetCours/Views/Login/Register.cshtml
+++ b/Solution1/ProjetCours/Views/Login/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetCours.Models.RegisterViewModel
 @{
 }
-
+<h1>Inscritption</h1>
 <form asp-action="Register">
     <div asp-validation-summary="All" class="text-danger"></div>
 
