--- a/Solution1/ProjetCours/Views/Shared/Components/Menu/Default.cshtml
+++ b/Solution1/ProjetCours/Views/Shared/Components/Menu/Default.cshtml
@@ -6,6 +6,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="~/">Accueil</a>
         <a class="p-2 text-dark" asp-controller="Login" asp-action="Register">Inscritption</a>
+        <a class="p-2 text-dark" asp-controller="Login" asp-action="List">Liste des Utilisateurs</a>
         <a class="p-2 text-dark" asp-controller="Cars" asp-action="Index">Liste des Voitures</a>
         <a class="p-2 text-dark" asp-controller="Cars" asp-action="Create">Ajouter voiture</a>
         <a class="p-2 text-dark" asp-controller="Fuels" asp-action="Create">Ajouter Fuel</a>
