--- a/Solution1/ProjetCours/Views/Login/Index.cshtml
+++ b/Solution1/ProjetCours/Views/Login/Index.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 <h1>Connexion</h1>
-<form asp-action="Index">
+<form asp-action="Login">
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
